// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-atlas",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bpcl-sbi-octane",
    "sc-rewards",
    "axis-ace",
    "hdfc-infinia-metal",
  ],
  "category-education-payments": [
    "amex-membership-rewards",
    "amex-gold",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "sc-ultimate",
    "axis-atlas",
    "indusind-eazydiner",
    "hdfc-infinia-metal",
    "amex-platinum-travel",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
    "indusind-eazydiner-platinum",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "sc-beyond",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "sc-beyond",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bpcl-sbi-octane",
    "sc-rewards",
    "axis-ace",
    "hdfc-infinia-metal",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bpcl-sbi-octane",
    "sc-rewards",
    "axis-ace",
    "hdfc-infinia-metal",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "axis-fibe",
    "sbi-card-prime",
    "shaurya-select-sbi",
    "rbl-platinum-maxima-plus",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "amex-platinum-travel",
    "icici-adani-one-signature",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-airtel",
    "axis-ace",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-samsung-signature",
    "axis-cashback",
  ],
  "forex": [
    "kotak-infinite",
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "amex-gold",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "au-ixigo",
    "hdfc-regalia-gold",
  ],
  "forex-zero": [
    "au-ixigo",
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "kotak-solitaire",
    "yes-marquee",
    "sc-beyond",
    "kotak-white-reserve",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-atlas",
    "axis-magnus",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-airtel",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-cashback",
    "axis-horizon",
    "axis-ace",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-samsung-signature",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
    "hdfc-shoppers-stop",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-amazon-pay",
    "icici-coral-rupay",
    "icici-adani-one-signature",
    "icici-coral",
    "icici-hpcl-super-saver",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-rubyx",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "sbi-card-pulse",
    "sbi-cashback",
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "titan-sbi",
    "indigo-sbi-elite",
    "sbi-card-miles-elite",
    "sbi-card-miles-prime",
    "sbi-card-elite",
    "flipkart-sbi",
    "aurum-sbi",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "au-ixigo",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-signet",
  ],
  "lounge": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "axis-atlas",
    "axis-airtel",
    "phonepe-sbi-select-black",
  ],
  "lounge-query": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-atlas",
    "axis-airtel",
    "phonepe-sbi-select-black",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "axis-airtel",
    "phonepe-sbi-select-black",
    "amex-platinum-travel",
    "kotak-solitaire",
    "csb-jupiter-edge-plus",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "csb-jupiter-edge-plus",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "au-ixigo",
    "axis-fibe",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "amex-smartearn",
    "cheq-au",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-samsung-signature",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "axis-airtel",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "axis-ace",
    "axis-fibe",
    "axis-rewards",
    "axis-select",
    "axis-my-zone",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-swiggy",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "axis-airtel",
  ],
  "network-rupay": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "axis-magnus-burgundy",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hsbc-live-plus",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "axis-airtel",
    "amex-smartearn",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
    "axis-ace",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "yes-marquee",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "indusind-eazydiner",
    "amex-gold",
    "sbi-card-elite",
    "sbi-card-prime",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "kotak-white-reserve",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "axis-magnus-burgundy",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
    "kotak-solitaire",
    "au-ixigo",
    "hdfc-regalia-gold",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-airtel",
  ],
  "spend-level-light": [
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-gold",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-airtel",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "usecase-cashback": [
    "axis-airtel",
    "phonepe-sbi-select-black",
    "hdfc-swiggy",
    "yes-kiwi",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "hsbc-live-plus",
    "sc-beyond",
    "hdfc-phonepe-ultimo",
    "hsbc-rupay-cashback",
    "titan-sbi",
  ],
  "usecase-dining": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "axis-fibe",
    "sbi-card-prime",
    "shaurya-select-sbi",
    "rbl-platinum-maxima-plus",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "sbi-card-elite",
    "sbi-card-prime",
    "icici-coral",
    "landmark-rewards-sbi-prime",
    "bpcl-sbi-octane",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "kotak-cashback-plus",
    "idfc-first-power",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "idfc-first-earn",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "kotak-cashback-plus",
    "rbl-shoprite",
    "sbi-card-prime",
    "sbi-card-elite",
    "shaurya-select-sbi",
    "rbl-platinum-maxima-plus",
    "hdfc-moneyback-plus",
    "axis-indigo-premium",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-cashback",
    "kotak-cashback-plus",
    "axis-cashback",
    "au-ixigo",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-airtel",
    "axis-fibe",
    "yes-pop-club",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-atlas",
  ],
  "usecase-upi": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "amex-gold",
    "hdfc-indianoil",
    "hdfc-infinia-metal",
    "axis-ace",
    "bpcl-sbi-octane",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
  ],
  "category-education-payments": [
    "amex-membership-rewards",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "hdfc-infinia-metal",
    "amex-gold",
    "axis-atlas",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "amex-smartearn",
    "hdfc-millennia",
  ],
  "category-rent": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "amex-gold",
    "hdfc-infinia-metal",
    "axis-ace",
    "bpcl-sbi-octane",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
  ],
  "category-utility-bills": [
    "axis-ace",
    "sbi-card-prime",
    "icici-emeralde-private-metal",
    "cheq-au",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "icici-hpcl-super-saver",
    "amex-gold",
    "bobcard-hpcl-energie",
    "idfc-first-power",
    "bobcard-select",
  ],
  "combo-dining-under-5000": [
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "hdfc-swiggy-orange",
    "bobcard-eterna",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "indusind-eazydiner",
    "yes-first-preferred",
    "bpcl-sbi-octane",
    "hdfc-marriott-bonvoy",
    "rbl-platinum-maxima-plus",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "amex-platinum-travel",
    "icici-adani-one-signature",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-airtel",
    "axis-ace",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-samsung-signature",
    "axis-cashback",
  ],
  "forex": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "bobcard-etihad-guest-premium",
    "axis-magnus",
    "icici-times-black",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-wow",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
    "axis-atlas",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-solitaire",
    "kotak-white-reserve",
    "hdfc-diners-club-black-metal",
    "axis-reserve",
    "hdfc-infinia-metal",
    "icici-times-black",
    "sc-beyond",
    "aurum-sbi",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-cashback",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-airtel",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-amazon-pay",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-emeralde",
    "icici-sapphiro",
    "icici-coral-rupay",
    "icici-coral",
    "icici-sapphiro-rupay",
    "icici-hpcl-coral",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "aurum-sbi",
    "titan-sbi",
    "indigo-sbi-elite",
    "flipkart-sbi",
    "sbi-card-miles-elite",
    "sbi-cashback",
    "sbi-card-prime",
    "sbi-card-miles-prime",
    "tata-neu-plus-sbi",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "yes-kiwi",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "phonepe-sbi-select-black",
    "equitas-powermiles",
    "equitas-selfe",
    "hdfc-marriott-bonvoy",
    "amex-gold",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "yes-kiwi",
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "icici-amazon-pay",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "sc-priority-visa-infinite",
    "kotak-infinite",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-flipkart",
    "flipkart-sbi",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "axis-ace",
    "axis-fibe",
    "axis-airtel",
    "hsbc-rupay-cashback",
    "axis-rewards",
    "axis-my-zone",
    "axis-select",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-swiggy",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "axis-airtel",
  ],
  "network-rupay": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "axis-magnus-burgundy",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hsbc-live-plus",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "axis-airtel",
    "amex-smartearn",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
    "axis-ace",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "yes-marquee",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "indusind-eazydiner",
    "amex-gold",
    "sbi-card-elite",
    "sbi-card-prime",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "kotak-white-reserve",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "axis-magnus-burgundy",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-atlas",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "indusind-tiger",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
    "kotak-solitaire",
    "au-ixigo",
    "hdfc-regalia-gold",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "axis-flipkart-super-elite",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "hsbc-visa-platinum",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hsbc-rupay-cashback",
    "hdfc-millennia",
    "hdfc-phonepe-ultimo",
    "axis-ace",
    "titan-sbi",
    "kotak-cashback-plus",
  ],
  "usecase-dining": [
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "hsbc-rupay-cashback",
    "hdfc-marriott-bonvoy",
    "sbi-card-prime",
    "indusind-eazydiner",
    "yes-first-preferred",
    "axis-fibe",
    "bpcl-sbi-octane",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "sbi-card-prime",
    "sbi-card-elite",
    "bpcl-sbi-octane",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "icici-coral",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "sc-platinum-rewards",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "kotak-cashback-plus",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "hdfc-moneyback-plus",
    "bpcl-sbi-octane",
    "shaurya-select-sbi",
    "rbl-shoprite",
    "rbl-platinum-maxima-plus",
    "axis-indigo-premium",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "sbi-cashback",
    "phonepe-sbi-select-black",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-cashback",
    "indusind-eazydiner",
    "kotak-cashback-plus",
    "phonepe-sbi-purple",
    "yes-pop-club",
    "simplyclick-sbi",
    "icici-amazon-pay",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "usecase-upi": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "bpcl-sbi-octane",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "amex-gold",
      "sc-ultimate",
      "hdfc-infinia-metal",
      "sbi-card-prime",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "amex-membership-rewards",
      "axis-atlas",
      "indusind-eazydiner",
    ],
  },
  "category-rent": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "bpcl-sbi-octane",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "amex-gold",
      "sc-ultimate",
      "hdfc-infinia-metal",
      "sbi-card-prime",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "bpcl-sbi-octane",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "amex-gold",
      "sc-ultimate",
      "hdfc-infinia-metal",
      "sbi-card-prime",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "yes-paisabazaar-paisasave",
      "axis-fibe",
    ],
    "Rewards cards": [
      "bobcard-eterna",
      "sbi-card-prime",
      "shaurya-select-sbi",
      "rbl-platinum-maxima-plus",
      "yes-first-preferred",
    ],
  },
  "combo-premium-travel": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "sc-ultimate",
      "equitas-powermiles",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-flipkart",
      "axis-fibe",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-flipkart-super-elite",
      "axis-horizon",
      "axis-indigo-premium",
      "axis-magnus",
    ],
  },
  "forex": {
    "Cashback cards": [
      "hsbc-live-plus",
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-rupay-cashback",
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
    ],
  },
  "forex-zero": {
    "": [
      "bobcard-etihad-guest-premium",
      "kotak-solitaire",
      "idfc-mayura",
      "au-ixigo",
      "rbl-world-safari",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "kotak-solitaire",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "sc-beyond",
      "titan-sbi",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "issuer-amex": {
    "": [
      "amex-platinum-travel",
      "amex-gold",
      "amex-membership-rewards",
      "amex-platinum-reserve",
      "amex-smartearn",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-flipkart",
      "axis-fibe",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "axis-flipkart-super-elite",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-millennia",
      "hdfc-phonepe-ultimo",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "titan-sbi",
      "flipkart-sbi",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "tata-neu-infinity-sbi",
      "aurum-sbi",
      "sbi-card-miles-elite",
      "indigo-sbi-elite",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "yes-kiwi",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "csb-jupiter-edge-plus",
      "indusind-tiger",
      "hsbc-rupay-platinum",
      "au-ixigo",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "sc-beyond",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "sc-beyond",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-atlas",
      "kotak-solitaire",
      "bobcard-etihad-guest-premium",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "yes-kiwi",
      "icici-amazon-pay",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
      "axis-google-pay-flex",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "hsbc-visa-platinum",
      "csb-jupiter-edge-plus",
      "indusind-tiger",
      "hsbc-rupay-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "axis-flipkart",
      "flipkart-sbi",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hsbc-live-plus",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-my-zone",
      "axis-select",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "sbi-cashback",
      "hdfc-swiggy-black",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "sbi-card-elite",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "hsbc-live-plus",
      "kotak-cashback-plus",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "hdfc-regalia-gold",
      "hdfc-infinia-metal",
      "axis-atlas",
      "indusind-eazydiner",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "axis-airtel",
      "hdfc-swiggy-orange",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "csb-jupiter-edge-plus",
      "amex-smartearn",
      "hdfc-diners-club-privilege",
      "hdfc-shoppers-stop",
      "hsbc-visa-platinum",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "bpcl-sbi-octane",
      "apollo-sbi-select",
      "rbl-patanjali-swarn",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "amex-membership-rewards",
      "indusind-eazydiner",
      "amex-gold",
    ],
  },
  "segment-premium": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "sc-ultimate",
      "equitas-powermiles",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hsbc-live-plus",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "axis-atlas",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "yes-kiwi",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hsbc-rupay-cashback",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "titan-sbi",
      "sc-beyond",
      "hsbc-live-plus",
      "icici-amazon-pay",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
      "au-ixigo",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hsbc-live-plus",
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
      "hdfc-swiggy",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "yes-kiwi",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "sbi-cashback",
      "yes-paisabazaar-paisasave",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
      "hdfc-infinia-metal",
    ],
  },
  "usecase-cashback": {
    "": [
      "phonepe-sbi-select-black",
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "yes-paisabazaar-paisasave",
      "axis-fibe",
    ],
    "Rewards cards": [
      "bobcard-eterna",
      "sbi-card-prime",
      "shaurya-select-sbi",
      "rbl-platinum-maxima-plus",
      "yes-first-preferred",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
      "sbi-card-prime",
      "sbi-card-elite",
      "landmark-rewards-sbi-prime",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "idfc-first-earn",
    ],
    "Rewards cards": [
      "idfc-first-power-plus",
      "axis-indianoil-premium",
      "axis-indianoil-easy",
      "idfc-first-power",
      "hdfc-indianoil",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "kotak-cashback-plus",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "sbi-card-prime",
      "sbi-card-elite",
      "shaurya-select-sbi",
      "rbl-platinum-maxima-plus",
      "hdfc-moneyback-plus",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "axis-cashback",
      "axis-fibe",
      "hdfc-pixel-play",
    ],
    "Rewards cards": [
      "csb-jupiter-edge-plus",
      "indusind-eazydiner",
      "au-ixigo",
      "bobcard-eterna",
      "rbl-world-max",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "sc-beyond",
      "axis-ace",
      "axis-fibe",
      "apollo-sbi-select",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "axis-cashback",
      "axis-fibe",
      "hdfc-pixel-play",
    ],
    "Rewards cards": [
      "csb-jupiter-edge-plus",
      "indusind-eazydiner",
      "au-ixigo",
      "bobcard-eterna",
      "rbl-world-max",
    ],
  },
  "premium-degrade-single": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "sc-ultimate",
      "equitas-powermiles",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
}
`;
